--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,6 +129,12 @@
     // APP_VERSION을 사용하여 리소스 버전 관리
     const BASE_URL = '{{ site.baseurl }}';
 
+    // SEO path-lang flag: permalink이 /{lang}/ 로 시작하면 path 기반 언어 페이지
+    {% assign _seg1 = page.url | remove_first: '/' | split: '/' | first %}
+    {% if _seg1 == 'kr' or _seg1 == 'en' or _seg1 == 'jp' or _seg1 == 'cn' %}
+    var __SEO_PATH_LANG__ = '{{ _seg1 }}';
+    {% endif %}
+
     // 기본 CSS 및 JS 파일 로드
     document.write('<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/default/common.css?v=' + APP_VERSION + '">');
     document.write('<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/default/nav.css?v=' + APP_VERSION + '">');
