--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,6 +72,8 @@
   <meta property="og:site_name" content="P5X Lufelnet">
   {% if page.language == 'kr' %}
   <meta property="og:locale" content="ko_KR">
+  {% elsif page.language == 'cn' %}
+  <meta property="og:locale" content="zh_CN">
   {% elsif page.language == 'jp' %}
   <meta property="og:locale" content="ja_JP">
   {% else %}
